added content and counts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,11 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.full-height-minus-header {
+  min-height: calc(100vh - theme('height.20'));
+}
+
+.full-page-height {
+  height: calc(100vh - theme('height.20'));
+}
